--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projet Web réalisé par Guilhem Lacombe, Julie Nanta, Nathan Ragonnet et Arnaud Michel",
   "main": "dist/app.js",
   "scripts": {
-    "start:dev": "nodemon",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@types/node": "^13.7.7",
-    "express": "^4.16.4"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
