--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/EpitechMscPro2020/T-WEB-800_2021#readme",
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.10.5",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tslint": "^5.12.1",
@@ -26,7 +27,9 @@
   },
   "dependencies": {
     "@types/node": "^13.7.7",
+    "config": "^3.3.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.5"
   }
 }
