--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/EpitechMscPro2020/T-WEB-800_2021#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.5",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
@@ -26,10 +28,15 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/node": "^13.7.7",
+    "@types/validator": "^13.1.3",
+    "bcrypt": "^5.0.1",
     "config": "^3.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.5",
+    "validator": "^13.6.0"
   }
 }
