--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/node": "^13.7.7",
+    "@types/node-fetch": "^2.5.10",
     "@types/validator": "^13.1.3",
     "bcrypt": "^5.0.1",
     "config": "^3.3.3",
