--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^13.7.7",
     "@types/node-fetch": "^2.5.10",
     "@types/validator": "^13.1.3",
+    "amadeus": "^5.6.1",
     "bcrypt": "^5.0.1",
     "config": "^3.3.3",
     "dotenv": "^8.2.0",
