--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --check-leaks -r tsconfig-paths/register -r ts-node/register \"src/__tests__/**/*.spec.ts\""
   },
   "repository": {
     "type": "git",
@@ -19,17 +19,23 @@
   "homepage": "https://github.com/EpitechMscPro2020/T-WEB-800_2021#readme",
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
+    "@types/chai": "^4.2.18",
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mocha": "^8.2.2",
     "@types/mongoose": "^5.10.5",
+    "@types/supertest": "^2.0.11",
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "typescript": "^4.3.2"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
-    "@types/node": "^13.7.7",
     "@types/node-fetch": "^2.5.10",
     "@types/validator": "^13.1.3",
     "amadeus": "^5.6.1",
