--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,13 @@
     "esModuleInterop": true,
     "target": "es6",
     "moduleResolution": "node",
+    // "baseUrl": "./src",
     "sourceMap": true,
     "outDir": "dist"
   },
-  "lib": ["es2015"],
+  "lib": [
+    "es2015"
+  ],
   "exclude": [
     "node_modules",
     "public",
