--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Projet Web réalisé par Guilhem Lacombe, Julie Nanta, Nathan Ragonnet et Arnaud Michel",
   "main": "dist/app.js",
   "scripts": {
+    "start": "concurrently \"nodemon\" \"cd client && npm run start\"",
     "dev": "nodemon",
     "test": "mocha --check-leaks -r tsconfig-paths/register -r ts-node/register \"src/__tests__/**/*.spec.ts\""
   },
@@ -40,6 +41,7 @@
     "@types/validator": "^13.1.3",
     "amadeus": "^5.6.1",
     "bcrypt": "^5.0.1",
+    "concurrently": "^6.2.0",
     "config": "^3.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
