--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"nodemon\" \"cd client && npm run start\"",
     "dev": "nodemon",
-    "test": "mocha --check-leaks -r tsconfig-paths/register -r ts-node/register \"src/__tests__/**/*.spec.ts\""
+    "test": "jasmine-ts --config=./jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -19,14 +19,18 @@
   },
   "homepage": "https://github.com/EpitechMscPro2020/T-WEB-800_2021#readme",
   "devDependencies": {
+    "@testdeck/jasmine": "^0.1.2",
     "@types/bcrypt": "^3.0.1",
     "@types/chai": "^4.2.18",
     "@types/express": "^4.16.1",
+    "@types/jasmine": "^3.7.7",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/mocha": "^8.2.2",
     "@types/mongoose": "^5.10.5",
     "@types/supertest": "^2.0.11",
     "chai": "^4.3.4",
+    "jasmine": "^3.7.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
@@ -38,6 +42,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/node-fetch": "^2.5.10",
+    "@types/request": "^2.48.5",
     "@types/validator": "^13.1.3",
     "amadeus": "^5.6.1",
     "bcrypt": "^5.0.1",
