--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "esModuleInterop": true,
     "target": "es6",
     "moduleResolution": "node",
+    "experimentalDecorators": true,
     // "baseUrl": "./src",
     "sourceMap": true,
     "outDir": "dist"
