--- a/T-Web-800-REWORK/utils/docker/vhost.conf
+++ b/T-Web-800-REWORK/utils/docker/vhost.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-  ServerName www.EpiTravel.vm
-  ServerAlias EpiTravel.vm
+  ServerName www.epitravel.vm
+  ServerAlias epitravel.vm
   DocumentRoot "/var/html/www/public"
 
   UseCanonicalName Off
@@ -14,8 +14,8 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-  ServerName www.EpiTravel.vm
-  ServerAlias EpiTravel.vm
+  ServerName www.epitravel.vm
+  ServerAlias epitravel.vm
   DocumentRoot "/var/html/www/public"
 
   UseCanonicalName Off
