--- a/T-Web-800-REWORK/package.json
+++ b/T-Web-800-REWORK/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EpiTravel",
+  "name": "epitravel",
   "description": "Kirby starter for Arnaud",
   "homepage": "https://github.com/troadigital/EpiTravel",
   "version": "1.3.2",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "@types/concurrently": "^6.2.0",
     "autoprefixer": "^9.7.6",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.3",
